syntax = "proto3";

package jobworkerp.data;

import "jobworkerp/data/common.proto";

message WorkerSchemaData {
    // schema name (unique key, proto message prefix: e.g. name: "command", operation_proto: "CommandOperation", job_arg_proto: "CommandArg")
    string name = 1;
    // operation definition as proto file
    string operation_proto = 2;
    // job arg message definition as proto file. must use this.name as message type prefix (e.g. "message CommandArg{ repeated string args = 1; }")
    string job_arg_proto = 3;
}

message WorkerSchemaId {
    int64 value = 1;
}

message WorkerSchema {
  WorkerSchemaId id = 1;
  WorkerSchemaData data = 2;
}
