syntax = "proto3";

message GrpcUnaryArg {
    string path = 1;
    bytes request = 2;
}

